# wineasio

./: CMakeLists.txt  README.md  pipeasio-register
cmake/: WineDLL.cmake
docs/: index.html
gui/: CMakeLists.txt  Config.cpp  DeviceEnumerator.cpp  LoadHistogram.cpp  LoadHistogram.hpp  Makefile  PipeWireMonitor.cpp  SettingsDialog.cpp  SettingsDialog.hpp  main.cpp  pipeasio-settings  pipeasio-settings.desktop  settings.py  settings.ui  ui_settings.py
include/: audio.h  pipeasio_config.h  pipeasio_offsets.h
src/: asio.c  audio.c  config.c  main.c  regsvr.c
tests/asio_probe/: CMakeLists.txt  asio_probe.c  gdb.sh  run.sh
tests/pw_probe/: CMakeLists.txt  pw_delivery_probe.c  pw_filter_probe.c
tests/unit/: CMakeLists.txt  test_helpers.h  test_offsets.c
